--- a/index.html
+++ b/index.html
@@ -56,41 +56,41 @@
     <div class="tab-pane fade" id="1" role="tabpanel" aria-labelledby="1-tab">
       <div  class="row g-0 ">
         <div  class="col-4  ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/02/26/14/04/deer-7815910__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/02/26/14/04/deer-7815910__340.jpg" alt="">
         </div>
         <div  class="col-4 ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/02/03/13/36/marine-7765155__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/02/03/13/36/marine-7765155__340.jpg" alt="">
         </div>
         <div  class="col-4  ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/02/04/13/06/station-7767132__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/02/04/13/06/station-7767132__340.jpg" alt="">
         </div>
       
         <div  class="col-4 ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2022/11/20/09/06/night-view-7603847__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2022/11/20/09/06/night-view-7603847__340.jpg" alt="">
         </div>
         <div  class="col-4  ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/02/01/16/26/animal-7760773__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/02/01/16/26/animal-7760773__340.jpg" alt="">
         </div>
         <div  class="col-4 ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2022/10/31/20/27/lioness-7560708__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2022/10/31/20/27/lioness-7560708__340.jpg" alt="">
         </div>
         <div  class="col-4  ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2022/08/22/13/38/sea-7403739__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2022/08/22/13/38/sea-7403739__340.jpg" alt="">
         </div>
         <div  class="col-4  ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/01/27/14/56/boat-7748824__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/01/27/14/56/boat-7748824__340.jpg" alt="">
         </div>
         <div  class="col-4 ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/01/22/17/57/scooter-7737073__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/01/22/17/57/scooter-7737073__340.jpg" alt="">
         </div>
         <div  class="col-4 ">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/01/24/10/38/rope-7740707__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/01/24/10/38/rope-7740707__340.jpg" alt="">
         </div>
         <div  class="col-4">
-          <img class="p-1 pt-0 pb-2" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2022/10/14/09/11/building-7520849__340.jpg" alt="">
+          <img class="p-1 pt-0 pb-2 object-fit-cover" height="100%" width="100%" src="https://cdn.pixabay.com/photo/2022/10/14/09/11/building-7520849__340.jpg" alt="">
         </div>
         <div  class="col-4 ">
-          <img  class="p-1 pt-0 pb-2"height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/01/14/18/17/hot-air-balloon-7718789__340.jpg" alt="">
+          <img  class="p-1 pt-0 pb-2 object-fit-cover"height="100%" width="100%" src="https://cdn.pixabay.com/photo/2023/01/14/18/17/hot-air-balloon-7718789__340.jpg" alt="">
         </div>
       </div>
     </div>
